--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,3 +4,6 @@
 @import '_style.scss';
 @import '_media.scss';
 @import '_font_fontawesome.scss';
+@import '_fancybox.scss';
+@import '_jquery.fancybox-buttons.scss';
+@import '_jquery.fancybox-thumbs.scss';
