--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -1,22 +1,27 @@
-.menuTop .menu_area{
-	position:fixed;
-}
-.transparentMenu .menu_area{
+.menuTop .menu_area {
+  position: fixed;
 }
 
-.transparentMenu .main_menu_outer{
-	min-height:0;
-	opacity:0;
-	-moz-transition:all .5s;
-	-webkit-transition:all .5s;
-	-o-transition:all .5s;
-	-ms-transition:all .5s;
-	transition:all .5s;
+.transparentMenu {
+  .main_menu_outer {
+    min-height: 0;
+
+    -webkit-transition: all .5s;
+       -moz-transition: all .5s;
+        -ms-transition: all .5s;
+         -o-transition: all .5s;
+            transition: all .5s;
+
+    opacity: 0;
+  }
 }
-@media (max-width:767px){
-	.transparentMenu .main_menu_outer {
-	  opacity: 1 !important;
-	  transition: all 0s ease 0s;
-	  min-height:60px;
-	}
+
+@media (max-width: 767px) {
+  .transparentMenu .main_menu_outer {
+    min-height: 60px;
+
+    transition: all 0s ease 0s;
+
+    opacity: 1 !important;
+  }
 }
