--- a/assets/sass/_fancybox.scss
+++ b/assets/sass/_fancybox.scss
@@ -1,67 +1,83 @@
 /*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
 
-.fancybox-wrap, .fancybox-skin, .fancybox-outer, .fancybox-inner, .fancybox-image {
-  padding: 0;
+.fancybox-wrap,
+.fancybox-skin,
+.fancybox-outer,
+.fancybox-inner,
+.fancybox-image {
   margin: 0;
+  padding: 0;
+
+  vertical-align: top;
+
   border: 0;
   outline: none;
-  vertical-align: top;
 }
 
 .fancybox-wrap {
-  iframe, object {
-    padding: 0;
+  iframe,
+  object {
     margin: 0;
+    padding: 0;
+
+    vertical-align: top;
+
     border: 0;
     outline: none;
-    vertical-align: top;
   }
 }
 
 .fancybox-nav {
-  padding: 0;
   margin: 0;
+  padding: 0;
+
+  vertical-align: top;
+
   border: 0;
   outline: none;
-  vertical-align: top;
   span {
-    padding: 0;
     margin: 0;
+    padding: 0;
+
+    vertical-align: top;
+
     border: 0;
     outline: none;
-    vertical-align: top;
   }
 }
 
 .fancybox-tmp {
-  padding: 0;
   margin: 0;
+  padding: 0;
+
+  vertical-align: top;
+
   border: 0;
   outline: none;
-  vertical-align: top;
 }
 
 .fancybox-wrap {
   position: absolute;
+  z-index: 8020;
   top: 0;
   left: 0;
-  z-index: 8020;
 }
 
 .fancybox-skin {
   position: relative;
-  background: #f9f9f9;
+
   color: #444;
-  text-shadow: none;
   -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  background: #f9f9f9;
+  text-shadow: none;
 }
 
 .fancybox-opened {
   z-index: 8030;
   .fancybox-skin {
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 10px 25px rgba(0, 0, 0, .5);
   }
 }
 
@@ -71,6 +87,7 @@
 
 .fancybox-inner {
   position: relative;
+
   overflow: hidden;
 }
 
@@ -79,15 +96,20 @@
 }
 
 .fancybox-error {
-  color: #444;
-  font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font: 14px/20px 'Helvetica Neue',Helvetica,Arial,sans-serif;
+
   margin: 0;
   padding: 15px;
+
   white-space: nowrap;
+
+  color: #444;
 }
 
-.fancybox-image, .fancybox-iframe {
+.fancybox-image,
+.fancybox-iframe {
   display: block;
+
   width: 100%;
   height: 100%;
 }
@@ -97,48 +119,61 @@
   max-height: 100%;
 }
 
-#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+#fancybox-loading,
+.fancybox-close,
+.fancybox-prev span,
+.fancybox-next span {
   background-image: url('../images/fancybox_sprite.png');
 }
 
 #fancybox-loading {
   position: fixed;
+  z-index: 8060;
   top: 50%;
   left: 50%;
+
   margin-top: -22px;
   margin-left: -22px;
-  background-position: 0 -108px;
-  opacity: 0.8;
+
   cursor: pointer;
-  z-index: 8060;
+
+  opacity: .8;
+  background-position: 0 -108px;
   div {
     width: 44px;
     height: 44px;
+
     background: url('../images/fancybox_loading.gif') center center no-repeat;
   }
 }
 
 .fancybox-close {
   position: absolute;
+  z-index: 8040;
   top: -18px;
   right: -18px;
+
   width: 36px;
   height: 36px;
+
   cursor: pointer;
-  z-index: 8040;
 }
 
 .fancybox-nav {
   position: absolute;
+  z-index: 8040;
   top: 0;
+
   width: 40%;
   height: 100%;
+
   cursor: pointer;
   text-decoration: none;
+
   background: transparent url('../images/blank.gif');
   /* helps IE */
+
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  z-index: 8040;
 }
 
 .fancybox-prev {
@@ -151,22 +186,27 @@
 
 .fancybox-nav span {
   position: absolute;
+  z-index: 8040;
   top: 50%;
+
+  visibility: hidden;
+
   width: 36px;
   height: 34px;
   margin-top: -18px;
+
   cursor: pointer;
-  z-index: 8040;
-  visibility: hidden;
 }
 
 .fancybox-prev span {
   left: 10px;
+
   background-position: 0 -36px;
 }
 
 .fancybox-next span {
   right: 10px;
+
   background-position: 0 -72px;
 }
 
@@ -178,16 +218,19 @@
   position: absolute;
   top: -99999px;
   left: -99999px;
+
   visibility: hidden;
+  overflow: visible !important;
+
   max-width: 99999px;
   max-height: 99999px;
-  overflow: visible !important;
 }
 
 /* Overlay helper */
 
 .fancybox-lock {
   overflow: hidden !important;
+
   width: auto;
   body {
     overflow: hidden !important;
@@ -200,18 +243,20 @@
 
 .fancybox-overlay {
   position: absolute;
+  z-index: 8010;
   top: 0;
   left: 0;
-  overflow: hidden;
+
   display: none;
-  z-index: 8010;
+  overflow: hidden;
+
   background: url('../images/fancybox_overlay.png');
 }
 
 .fancybox-overlay-fixed {
   position: fixed;
-  bottom: 0;
   right: 0;
+  bottom: 0;
 }
 
 .fancybox-lock .fancybox-overlay {
@@ -222,11 +267,14 @@
 /* Title helper */
 
 .fancybox-title {
-  visibility: hidden;
-  font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font: normal 13px/20px 'Helvetica Neue',Helvetica,Arial,sans-serif;
+
   position: relative;
-  text-shadow: none;
   z-index: 8050;
+
+  visibility: hidden;
+
+  text-shadow: none;
 }
 
 .fancybox-opened .fancybox-title {
@@ -235,32 +283,40 @@
 
 .fancybox-title-float-wrap {
   position: absolute;
-  bottom: 0;
-  right: 50%;
-  margin-bottom: -35px;
   z-index: 8050;
+  right: 50%;
+  bottom: 0;
+
+  margin-bottom: -35px;
+
   text-align: center;
   .child {
-    display: inline-block;
-    margin-right: -100%;
-    padding: 2px 20px;
-    background: transparent;
-    /* Fallback for web browsers that doesn't support RGBa */
-    background: rgba(0, 0, 0, 0.8);
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    text-shadow: 0 1px 2px #222;
-    color: #FFF;
     font-weight: bold;
     line-height: 24px;
+
+    display: inline-block;
+
+    margin-right: -100%;
+    padding: 2px 20px;
+
     white-space: nowrap;
+
+    color: #fff;
+    -webkit-border-radius: 15px;
+       -moz-border-radius: 15px;
+            border-radius: 15px;
+    background: transparent;
+    /* Fallback for web browsers that doesn't support RGBa */
+    background: rgba(0, 0, 0, .8);
+    text-shadow: 0 1px 2px #222;
   }
 }
 
 .fancybox-title-outside-wrap {
   position: relative;
+
   margin-top: 10px;
+
   color: #fff;
 }
 
@@ -272,15 +328,20 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  color: #fff;
+
   padding: 10px;
+
+  color: #fff;
   background: #000;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(0, 0, 0, .8);
 }
 
 /*Retina graphics!*/
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min--moz-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5) {
-  #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+  #fancybox-loading,
+  .fancybox-close,
+  .fancybox-prev span,
+  .fancybox-next span {
     background-image: url('../images/fancybox_sprite@2x.png');
     background-size: 44px 152px;
     /*The size of the normal image, half the size of the hi-res image*/
