--- a/assets/sass/_flexslider.scss
+++ b/assets/sass/_flexslider.scss
@@ -9,83 +9,292 @@
  * Contributing author: Tyler Smith (@mbmufffin)
  */
 
-
 /* Browser Resets
 *********************************/
+
 .flex-container a:active,
 .flexslider a:active,
 .flex-container a:focus,
-.flexslider a:focus  {outline: none;}
+.flexslider a:focus {
+  outline: none;
+}
+
 .slides,
 .flex-control-nav,
-.flex-direction-nav {margin: 0; padding: 0; list-style: none;}
+.flex-direction-nav {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+}
 
 /* Icon Fonts
 *********************************/
 /* Font-face Icons */
 @font-face {
-	font-family: 'flexslider-icon';
-	src:url('fonts/flexslider-icon.eot');
-	src:url('fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'),
-		url('fonts/flexslider-icon.woff') format('woff'),
-		url('fonts/flexslider-icon.ttf') format('truetype'),
-		url('fonts/flexslider-icon.svg#flexslider-icon') format('svg');
-	font-weight: normal;
-	font-style: normal;
+  font-family: 'flexslider-icon';
+  font-weight: normal;
+  font-style: normal;
+
+  src: url('../fonts/flexslider-icon.eot');
+  src: url('../fonts/flexslider-icon.eot?#iefix') format('embedded-opentype'), url('../fonts/flexslider-icon.woff') format('woff'), url('../fonts/flexslider-icon.ttf') format('truetype'), url('../fonts/flexslider-icon.svg#flexslider-icon') format('svg');
 }
+
 
 /* FlexSlider Necessary Styles
 *********************************/
-.flexslider {margin: 0; padding: 0;}
-.flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block;}
-.flex-pauseplay span {text-transform: capitalize;}
+
+.flexslider {
+  margin: 0;
+  padding: 0;
+  .slides {
+    > li {
+      display: none;
+
+      -webkit-backface-visibility: hidden;
+    }
+    img {
+      display: block;
+
+      width: 100%;
+    }
+  }
+}
+
+/* Hide the slides before the JS is loaded. Avoids image jumping */
+
+.flex-pauseplay span {
+  text-transform: capitalize;
+}
 
 /* Clearfix for the .slides element */
-.slides:after {content: "\0020"; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
-html[xmlns] .slides {display: block;}
-* html .slides {height: 1%;}
+
+.slides:after {
+  line-height: 0;
+
+  display: block;
+  visibility: hidden;
+  clear: both;
+
+  height: 0;
+
+  content: '\0020';
+}
+
+html[xmlns] .slides {
+  display: block;
+}
+
+* html .slides {
+  height: 1%;
+}
 
 /* No JavaScript Fallback */
 /* If you are not using another script, such as Modernizr, make sure you
  * include js that eliminates this class on page load */
-.no-js .slides > li:first-child {display: block;}
+
+.no-js .slides > li:first-child {
+  display: block;
+}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider { margin: 0 0 60px; background: #fff; border: 4px solid #fff; position: relative; -webkit-border-radius: 4px; -moz-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0 1px 4px rgba(0,0,0,.2); -moz-box-shadow: 0 1px 4px rgba(0,0,0,.2); -o-box-shadow: 0 1px 4px rgba(0,0,0,.2); box-shadow: 0 1px 4px rgba(0,0,0,.2); zoom: 1; }
-.flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
-.loading .flex-viewport { max-height: 300px; }
-.flexslider .slides { zoom: 1; }
-.carousel li { margin-right: 5px; }
+
+.flexslider {
+  position: relative;
+
+  zoom: 1;
+
+  margin: 0 0 60px;
+
+  border: 4px solid #fff;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  background: #fff;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
+     -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
+          box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
+
+       -o-border-radius: 4px;
+       -o-box-shadow: 0 1px 4px rgba(0, 0, 0, .2);
+}
+
+.flex-viewport {
+  max-height: 2000px;
+
+  -webkit-transition: all 1s ease;
+     -moz-transition: all 1s ease;
+       -o-transition: all 1s ease;
+          transition: all 1s ease;
+}
+
+.loading .flex-viewport {
+  max-height: 300px;
+}
+
+.flexslider .slides {
+  zoom: 1;
+}
+
+.carousel li {
+  margin-right: 5px;
+}
 
 /* Direction Nav */
-.flex-direction-nav {*height: 0;}
-.flex-direction-nav a  { text-decoration:none; display: block; width: 40px; height: 40px; margin: -20px 0 0; position: absolute; top: 50%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0 rgba(255,255,255,0.3); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
-.flex-direction-nav .flex-prev { left: -50px; }
-.flex-direction-nav .flex-next { right: -50px; text-align: right; }
-.flexslider:hover .flex-prev { opacity: 0.7; left: 10px; }
-.flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
-.flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1; }
-.flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
-.flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; display: inline-block; content: '\f001'; }
-.flex-direction-nav a.flex-next:before  { content: '\f002'; }
+
+.flex-direction-nav {
+  *height: 0;
+  a {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+
+    display: block;
+    overflow: hidden;
+
+    width: 40px;
+    height: 40px;
+    margin: -20px 0 0;
+
+    cursor: pointer;
+    -webkit-transition: all .3s ease;
+       -moz-transition: all .3s ease;
+            transition: all .3s ease;
+    text-decoration: none;
+
+    opacity: 0;
+    color: rgba(0, 0, 0, .8);
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, .3);
+  }
+  .flex-prev {
+    left: -50px;
+  }
+  .flex-next {
+    right: -50px;
+
+    text-align: right;
+  }
+}
+
+.flexslider:hover {
+  .flex-prev {
+    left: 10px;
+
+    opacity: .7;
+  }
+  .flex-next {
+    right: 10px;
+
+    opacity: .7;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .flex-prev:hover {
+    opacity: 1;
+  }
+}
+
+.flex-direction-nav {
+  .flex-disabled {
+    cursor: default;
+
+    opacity: 0 !important;
+
+    filter: alpha(opacity = 0);
+  }
+  a {
+    &:before {
+      font-family: 'flexslider-icon';
+      font-size: 40px;
+
+      display: inline-block;
+
+      content: '\f001';
+    }
+    &.flex-next:before {
+      content: '\f002';
+    }
+  }
+}
 
 /* Pause/Play */
-.flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
-.flex-pauseplay a:before  { font-family: "flexslider-icon"; font-size: 20px; display: inline-block; content: '\f004'; }
-.flex-pauseplay a:hover  { opacity: 1; }
-.flex-pauseplay a.flex-play:before { content: '\f003'; }
 
+.flex-pauseplay a {
+  position: absolute;
+  z-index: 10;
+  bottom: 5px;
+  left: 10px;
 
+  display: block;
+  overflow: hidden;
 
-.flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
-.flex-control-thumbs li {width: 25%; float: left; margin: 0;}
-.flex-control-thumbs img {width: 100%; display: block; opacity: .7; cursor: pointer;}
-.flex-control-thumbs img:hover {opacity: 1;}
-.flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
+  width: 20px;
+  height: 20px;
+
+  cursor: pointer;
+
+  opacity: .8;
+  color: #000;
+  &:before {
+    font-family: 'flexslider-icon';
+    font-size: 20px;
+
+    display: inline-block;
+
+    content: '\f004';
+  }
+  &:hover {
+    opacity: 1;
+  }
+  &.flex-play:before {
+    content: '\f003';
+  }
+}
+
+.flex-control-thumbs {
+  position: static;
+
+  overflow: hidden;
+
+  margin: 5px 0 0;
+  li {
+    float: left;
+
+    width: 25%;
+    margin: 0;
+  }
+  img {
+    display: block;
+
+    width: 100%;
+
+    cursor: pointer;
+
+    opacity: .7;
+    &:hover {
+      opacity: 1;
+    }
+  }
+  .flex-active {
+    cursor: default;
+
+    opacity: 1;
+  }
+}
 
 @media screen and (max-width: 860px) {
-  .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
-  .flex-direction-nav .flex-next { opacity: 1; right: 10px;}
+  .flex-direction-nav {
+    .flex-prev {
+      left: 10px;
+
+      opacity: 1;
+    }
+    .flex-next {
+      right: 10px;
+
+      opacity: 1;
+    }
+  }
 }
