--- a/assets/sass/_jquery.fancybox-buttons.scss
+++ b/assets/sass/_jquery.fancybox-buttons.scss
@@ -1,8 +1,9 @@
 #fancybox-buttons {
   position: fixed;
-  left: 0;
-  width: 100%;
   z-index: 8050;
+  left: 0;
+
+  width: 100%;
   &.top {
     top: 10px;
   }
@@ -11,40 +12,48 @@
   }
   ul {
     display: block;
+
     width: 166px;
     height: 30px;
     margin: 0 auto;
     padding: 0;
+
     list-style: none;
+
     border: 1px solid #111;
     border-radius: 3px;
-    -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
-    -moz-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
-    box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
     background: rgb(50, 50, 50);
-    background: -moz-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
+    background:    -moz-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgb(68, 68, 68)), color-stop(50%, rgb(52, 52, 52)), color-stop(50%, rgb(41, 41, 41)), color-stop(100%, rgb(51, 51, 51)));
     background: -webkit-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
-    background: -o-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
-    background: -ms-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
-    background: linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
+    background:      -o-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
+    background:     -ms-linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
+    background:         linear-gradient(top, rgb(68, 68, 68) 0%, rgb(52, 52, 52) 50%, rgb(41, 41, 41) 50%, rgb(51, 51, 51) 100%);
+    -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05);
+       -moz-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05);
+            box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05);
+
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#444444', endColorstr='#222222',GradientType=0 );
     li {
       float: left;
+
       margin: 0;
       padding: 0;
     }
   }
   a {
     display: block;
+
     width: 30px;
     height: 30px;
+
     text-indent: -9999px;
+
+    opacity: .8;
+    outline: none;
     background-color: transparent;
     background-image: url('../images/fancybox_buttons.png');
     background-repeat: no-repeat;
-    outline: none;
-    opacity: 0.8;
     &:hover {
       opacity: 1;
     }
@@ -52,8 +61,8 @@
       background-position: 5px 0;
     }
     &.btnNext {
-      background-position: -33px 0;
       border-right: 1px solid #3e3e3e;
+      background-position: -33px 0;
     }
     &.btnPlay {
       background-position: 0 -30px;
@@ -62,22 +71,25 @@
       background-position: -30px -30px;
     }
     &.btnToggle {
-      background-position: 3px -60px;
-      border-left: 1px solid #111;
-      border-right: 1px solid #3e3e3e;
       width: 35px;
+
+      border-right: 1px solid #3e3e3e;
+      border-left: 1px solid #111;
+      background-position: 3px -60px;
     }
     &.btnToggleOn {
       background-position: -27px -60px;
     }
     &.btnClose {
-      border-left: 1px solid #111;
       width: 35px;
-      background-position: -56px 0px;
+
+      border-left: 1px solid #111;
+      background-position: -56px 0;
     }
     &.btnDisabled {
-      opacity: 0.4;
       cursor: default;
+
+      opacity: .4;
     }
   }
 }
