--- a/assets/sass/_jquery.fancybox-thumbs.scss
+++ b/assets/sass/_jquery.fancybox-thumbs.scss
@@ -1,9 +1,11 @@
 #fancybox-thumbs {
   position: fixed;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
   z-index: 8050;
+  left: 0;
+
+  overflow: hidden;
+
+  width: 100%;
   &.bottom {
     bottom: 2px;
   }
@@ -12,35 +14,45 @@
   }
   ul {
     position: relative;
-    list-style: none;
+
     margin: 0;
     padding: 0;
+
+    list-style: none;
     li {
       float: left;
+
       padding: 1px;
-      opacity: 0.5;
+
+      opacity: .5;
       &.active {
-        opacity: 0.75;
         padding: 0;
+
+        opacity: .75;
         border: 1px solid #fff;
       }
       &:hover {
         opacity: 1;
       }
       a {
-        display: block;
         position: relative;
+
+        display: block;
         overflow: hidden;
+
         border: 1px solid #222;
-        background: #111;
         outline: none;
+        background: #111;
       }
       img {
-        display: block;
         position: relative;
-        border: 0;
-        padding: 0;
+
+        display: block;
+
         max-width: none;
+        padding: 0;
+
+        border: 0;
       }
     }
   }
