--- a/assets/sass/_preViews.scss
+++ b/assets/sass/_preViews.scss
@@ -1,186 +1,256 @@
 a:focus {
   outline: none;
 }
-.preViewsMenu_area{
-	background: none repeat scroll 0 0 #f6f6f6;
-	height: auto;
-	left: -263px;
-	margin: 0;
-	padding:0;
-	position: fixed;
-	bottom: 10px;
-	width: 260px;
-	z-index: 1030;
-	-webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.44);
-	-moz-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.44);
-	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.44);
-}
-.preViewSetting {
-	background:   #f6f6f6;
-	border-radius: 0 5px 5px 0;
-	box-shadow: 2px 0 1px 0 rgba(0, 0, 0, 0.3);
-	cursor: pointer;
-	display: block;
-	font-size: 26px;
-	height: 50px;
-	left: 100%;
-	padding-top: 7px;
-	position: absolute;
-	text-align: center;
-	top: 0;
-	width: 50px;
-	z-index: 1001;
-	background-size:cover;
-	transition:all .5s;
-}
-@keyframes settingsAnimation1{
-	from {
-		-webkit-transform:rotate(0deg);
-		-moz-transform:rotate(0deg);
-		-o-transform:rotate(0deg);
-		-ms-transform:rotate(0deg);
-		transform:rotate(0deg);
-	}
-	to{
-		-webkit-transform:rotate(360deg);
-		-moz-transform:rotate(360deg);
-		-o-transform:rotate(360deg);
-		transform:rotate(360deg);
-	}
-}
-@-webkit-keyframes settingsAnimation1{
-	from {
-		-webkit-transform:rotate(0deg);
-		-moz-transform:rotate(0deg);
-		-o-transform:rotate(0deg);
-		-ms-transform:rotate(0deg);
-		transform:rotate(0deg);
-	}
-	to{
-		-webkit-transform:rotate(360deg);
-		-moz-transform:rotate(360deg);
-		-o-transform:rotate(360deg);
-		transform:rotate(360deg);
-	}
-}
-.preViewSetting i.glyphicon-cog{
-	/*
-	-webkit-animation:settingsAnimation1 5s infinite;
-	-moz-animation:settingsAnimation1 5s infinite;
-	-o-animation:settingsAnimation1 5s infinite;
-	-ms-animation:settingsAnimation1 5s infinite;
-	animation:settingsAnimation1 5s infinite;
-	*/
-	margin-top:5px;
-}
-.preViewsColor{
-	display: block;
-	margin: 0;
-	padding: 0;
-	text-align:left;
+
+.preViewsMenu_area {
+  position: fixed;
+  z-index: 1030;
+  bottom: 10px;
+  left: -263px;
+
+  width: 260px;
+  height: auto;
+  margin: 0;
+  padding: 0;
+
+  background: none repeat scroll 0 0 #f6f6f6;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .44);
+     -moz-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .44);
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .44);
 }
 
-.preViewsColor a{
-	background: none repeat scroll 0 0 #fff;
-	cursor: pointer;
-	display: inline-block;
-	height: 20px;
-	margin: 0;
-	padding: 0;
-	text-decoration: none;
-	width: 30px;
-	-ms-transition:all .5s;
-	-o-transition:all .5s;
-	-moz-transition:all .5s;
-	-webkit-transition:all .5s;
-	transition:all .5s;
+.preViewSetting {
+  font-size: 26px;
+
+  position: absolute;
+  z-index: 1001;
+  top: 0;
+  left: 100%;
+
+  display: block;
+
+  width: 50px;
+  height: 50px;
+  padding-top: 7px;
+
+  cursor: pointer;
+  transition: all .5s;
+  text-align: center;
+
+  border-radius: 0 5px 5px 0;
+  background: #f6f6f6;
+  background-size: cover;
+  box-shadow: 2px 0 1px 0 rgba(0, 0, 0, .3);
+  i.glyphicon-cog {
+    /*
+    -webkit-animation:settingsAnimation1 5s infinite;
+    -moz-animation:settingsAnimation1 5s infinite;
+    -o-animation:settingsAnimation1 5s infinite;
+    -ms-animation:settingsAnimation1 5s infinite;
+    animation:settingsAnimation1 5s infinite;
+    */
+    margin-top: 5px;
+  }
 }
-.select_color a:hover{
-	-moz-transform: scale(1.5);
-	-ms-transform: scale(1.5);
-	-o-transform: scale(1.5);
-	-webkit-transform: scale(1.5);
-	transform: scale(1.5);
+
+@keyframes settingsAnimation1 {
+  from {
+    -webkit-transform: rotate(0deg);
+       -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+         -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+       -moz-transform: rotate(360deg);
+         -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
-.preViewsColor .default{
-	background:#FB850F;
+
+
+@-webkit-keyframes settingsAnimation1 {
+  from {
+    -webkit-transform: rotate(0deg);
+       -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+         -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+
+  to {
+    -webkit-transform: rotate(360deg);
+       -moz-transform: rotate(360deg);
+         -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
-.preViewsColor .blue {
-	background:#2AC3F6;
+
+
+.preViewsColor {
+  display: block;
+
+  margin: 0;
+  padding: 0;
+
+  text-align: left;
+  a {
+    display: inline-block;
+
+    width: 30px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+
+    cursor: pointer;
+    -webkit-transition: all .5s;
+       -moz-transition: all .5s;
+        -ms-transition: all .5s;
+         -o-transition: all .5s;
+            transition: all .5s;
+    text-decoration: none;
+
+    background: none repeat scroll 0 0 #fff;
+  }
 }
-.preViewsColor .green{
-	background:#FCD50A;
+
+.select_color a:hover {
+  -webkit-transform: scale(1.5);
+     -moz-transform: scale(1.5);
+      -ms-transform: scale(1.5);
+       -o-transform: scale(1.5);
+          transform: scale(1.5);
 }
-.preViewsColor .violet{
-	background:#5C2849;
+
+.preViewsColor {
+  .default {
+    background: #fb850f;
+  }
+  .blue {
+    background: #2ac3f6;
+  }
+  .green {
+    background: #fcd50a;
+  }
+  .violet {
+    background: #5c2849;
+  }
+  .yellow {
+    background: #fcd50a;
+  }
+  .softpink {
+    background: #edbad4;
+  }
+  .red {
+    background: #d72a3a;
+  }
+  .lightseagreen {
+    background: #24bd9d;
+  }
+  .light_green {
+    background: #a8cb72;
+  }
+  .deeppink {
+    background: #fc1d96;
+  }
+  .crimson {
+    background: #ed4463;
+  }
 }
-.preViewsColor .yellow{
-	background:#FCD50A;
+
+.preViewsMenu_area > h2 {
+  font-family: 'Great Vibes',cursive;
+  font-size: 40px;
+  font-weight: 400;
+
+  margin: 0;
+  padding: 15px 30px;
+
+  text-decoration: none;
+
+  color: #ff7f00 !important;
 }
-.preViewsColor .softpink {
-	background:#EDBAD4;
+
+.single_pree_area {
+  padding: 15px 20px;
+
+  border-top: 1px solid #e5e5e5;
+  > h2 {
+    font-size: 16px;
+    line-height: 20px;
+
+    margin: 4px 0;
+    padding: 0;
+
+    text-transform: capitalize;
+  }
+  .layout_style {
+    margin-right: -3px;
+    margin-left: -3px;
+  }
 }
-.preViewsColor .red  {
-	background:#D72A3A;
+
+.default_style a {
+  font-size: 12px;
+
+  display: inline-block;
+
+  min-width: 68px;
+  min-height: 25px;
+  margin: 5px 2px;
+  padding: 3px 8px;
+
+  text-align: center;
+  text-decoration: none;
+
+  color: #26354a;
+  border: 1px solid #888;
+  background: transparent;
 }
-.preViewsColor .lightseagreen {
-	background:#24BD9D;
+
+.single_pree_area {
+  .layout_style a,
+  .header_style a {
+    font-size: 12px;
+
+    display: inline-block;
+
+    min-width: 68px;
+    min-height: 25px;
+    margin: 5px 2px;
+    padding: 3px 8px;
+
+    text-align: center;
+    text-decoration: none;
+
+    color: #26354a;
+    border: 1px solid #888;
+    background: transparent;
+  }
 }
-.preViewsColor .light_green {
-	background:#A8CB72;
+
+.default_style a:hover {
+  color: #21c2f8;
+  border-color: #21c2f8;
 }
-.preViewsColor .deeppink {
-	background:#FC1D96;
+
+.single_pree_area {
+  .layout_style a:hover {
+    color: #21c2f8;
+    border-color: #21c2f8;
+  }
+  .header_style {
+    margin-right: -3px;
+    margin-left: -3px;
+    a:hover {
+      color: #21c2f8;
+      border-color: #21c2f8;
+    }
+  }
 }
-.preViewsColor .crimson {
-	background:#ED4463;
-}
-.preViewsMenu_area>h2{
-	margin: 0;
-	padding: 15px 30px;
-	color: #FF7F00 !important;
-	font-family: 'Great Vibes',cursive;
-	font-size: 40px;
-	font-weight: 400;
-	text-decoration: none;
-}
-.single_pree_area{
-	border-top: 1px solid #e5e5e5;
-	padding: 15px 20px;
-}
-.single_pree_area>h2{
-	font-size: 16px;
-	line-height: 20px;
-	margin: 4px 0;
-	padding: 0;
-	text-transform: capitalize;
-}
-.single_pree_area .layout_style{
-	margin-left: -3px;
-	margin-right: -3px;
-}
-.default_style a,.single_pree_area .layout_style a,.single_pree_area .header_style a{
-	background: transparent;
-	border: 1px solid #888;
-	color: #26354a;
-	display: inline-block;
-	font-size: 12px;
-	margin: 5px 2px;
-	padding: 3px 8px;
-	text-decoration:none;
-	min-width:68px;
-	min-height:25px;
-	text-align:center;
-}
-.default_style a:hover,.single_pree_area .layout_style a:hover,.single_pree_area .header_style a:hover{
-	color:#21c2f8;
-	border-color:#21c2f8;
-}
-.single_pree_area .header_style{
-	margin-left: -3px;
-	margin-right: -3px;
-}
-.single_pree_area .header_style a{}
-.preViewsMenu_area .glyphicon-arrow-left{
-	color:#c9c9c9;
+
+.preViewsMenu_area .glyphicon-arrow-left {
+  color: #c9c9c9;
 }
