--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -1211,7 +1211,7 @@ ul.pricing li {
   border-radius: 0 !important;
   border-image: none;
   background-color: #f5f5f5;
-  background-image: linear-gradient(to bottom, #fff, #e6e6e6);
+  background-image: linear-gradient(bottom, #fff, #e6e6e6);
   background-repeat: repeat-x;
   box-shadow: 0 1px 0 rgba(255, 255, 255, .2) inset, 0 1px 2px rgba(0, 0, 0, .05);
   text-shadow: 0 1px 1px rgba(255, 255, 255, .75);
