--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -28,6 +28,7 @@
     position: relative;
 
     width: 1110px;
+    width: 100%;
     height: 1160px;
     margin: 0 auto;
 
@@ -90,56 +91,56 @@
       }
       &:nth-child(1) {
         top: 177px;
-        left: 0;
+        left: 0.88%;
         &:before {
           content: '1';
         }
       }
       &:nth-child(2) {
         top: 0;
-        left: 293px;
+        left: 26.81%;
         &:before {
           content: '2';
         }
       }
       &:nth-child(3) {
         top: 22px;
-        left: 633px;
+        left: 56.02%;
         &:before {
           content: '3';
         }
       }
       &:nth-child(4) {
         top: 190px;
-        left: 870px;
+        left: 76.99%;
         &:before {
           content: '4';
         }
       }
       &:nth-child(5) {
         top: 580px;
-        left: 27px;
+        left: 2.39%;
         &:before {
           content: '5';
         }
       }
       &:nth-child(6) {
         top: 790px;
-        left: 270px;
+        left: 23.89%;
         &:before {
           content: '6';
         }
       }
       &:nth-child(7) {
         top: 780px;
-        left: 619px;
+        left: 54.78%;
         &:before {
           content: '7';
         }
       }
       &:nth-child(8) {
         top: 616px;
-        left: 877px;
+        left: 77.61%;
         &:before {
           content: '8';
         }
