--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,7 +7,20 @@
 @import '_fancybox.scss';
 @import '_jquery.fancybox-buttons.scss';
 @import '_jquery.fancybox-thumbs.scss';
+.clearfix {
+  *zoom: 1;
+  &:before {
+    display: table;
 
+    content: '';
+  }
+  &:after {
+    display: table;
+    clear: both;
+
+    content: '';
+  }
+}
 .our-services {
   height: 1390px;
   padding: 50px 50px 0;
@@ -46,6 +59,8 @@
 
       width: 220px;
       padding: 0;
+
+      @extend .clearfix;
       .image-block {
         width: 215px;
         height: 215px;
@@ -91,7 +106,7 @@
       }
       &:nth-child(1) {
         top: 177px;
-        left: 0.88%;
+        left: .88%;
         &:before {
           content: '1';
         }
@@ -143,6 +158,153 @@
         left: 77.61%;
         &:before {
           content: '8';
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1200px) {
+  .our-services {
+    padding: 50px 0 0;
+    .services {
+      li {
+        &:nth-child(3) {
+          top: 22px;
+          left: 53%;
+        }
+        &:nth-child(4) {
+          top: 160px;
+          left: 78.99%;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 1100px) {
+  .our-services {
+    background-position: -50px 175px;
+  }
+}
+@media (min-width: 320px) and (max-width: 1100px) {
+  .our-services {
+    width: 100%;
+    min-width: 300px;
+    height: 2050px;
+    margin: 0 auto;
+
+    background-position: center top;
+    background-size: cover;
+    .section_title {
+      h2 {
+        font-size: 45px;
+      }
+      p {
+        font-size: 13px;
+      }
+    }
+    .services {
+      width: 80%;
+      min-width: 320px;
+      margin: 0 auto;
+height: 1820px;
+      background-image: url(../images/bg/our-services-340.png);
+      background-repeat: no-repeat;
+      background-position: center top;
+      li {
+        width: 100%;
+        height: 138px;
+        .image-block {
+          width: 138px;
+          height: 138px;
+          margin: 0 auto;
+
+          border-radius: 50%;
+          .image {
+            width: 100%;
+            height: 100%;
+
+            border-radius: 50%;
+            .popup-text {
+              width: 100%;
+              height: 100%;
+
+              border-radius: 50%;
+            }
+          }
+        }
+        &:before {
+          font-size: 14px;
+          line-height: 2;
+
+          top: 105px;
+
+          width: 33px;
+          height: 33px;
+        }
+        &:nth-child(1),
+        &:nth-child(3),
+        &:nth-child(5),
+        &:nth-child(7) {
+          left: 1%;
+          .image-block {
+            float: left;
+          }
+          .text-block {
+            float: right;
+
+            width: 47%;
+            h3,
+            p {
+              text-align: left;
+            }
+          }
+        }
+        &:nth-child(2),
+        &:nth-child(4),
+        &:nth-child(6),
+        &:nth-child(8) {
+          right: 1%;
+          left: auto;
+          &:before {
+            left: auto;
+            right: 105px;
+          }
+          .image-block {
+            float: right;
+          }
+          .text-block {
+            float: left;
+
+            width: 47%;
+            h3,
+            p {
+              text-align: right;
+            }
+          }
+        }
+        &:nth-child(1) {
+          top: 225px;
+        }
+        &:nth-child(2) {
+          top: 425px;
+        }
+        &:nth-child(3) {
+          top: 630px;
+        }
+        &:nth-child(4) {
+          top: 860px;
+        }
+        &:nth-child(5) {
+          top: 1060px;
+        }
+        &:nth-child(6) {
+          top: 1260px;
+        }
+        &:nth-child(7) {
+          top: 1460px;
+        }
+        &:nth-child(8) {
+          top: 1670px;
         }
       }
     }
